modal adicionado, placeholder, nova função para dicas com palavras compostas

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -9,6 +9,11 @@ input {
     margin-right: 0.8rem;
 }
 
+.letterInput::placeholder {
+    font-size: 12px;
+    color: #999;
+  }
+
 .points span {
     font-weight: bold;
 }
