--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -32,6 +32,14 @@ input {
     border: 20px solid darkred;
 }
 
+.word {
+    display: flex;
+    margin-bottom: 0.6rem;
+    width: 100%;
+    height: 100%;
+  }
+  
+
 .letter, .blankSquare {
     display: flex;
     justify-content: center;
@@ -66,6 +74,12 @@ input {
         width: 4rem;
         height: 4rem;
       }
+      .word {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0.6rem;
+      }
 }
 
 @media (max-width: 600px) {
@@ -80,6 +94,12 @@ input {
     .space {
         width: 2.5rem;
         height: 2.5rem;
+      }
+      .word {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0.6rem;
       }
 }
 
